--- a/signal.html
+++ b/signal.html
@@ -132,7 +132,7 @@ function generateSignals(count){
 
   const tzOffset=parseInt(document.getElementById('timezone').value)||0;
   let now = new Date();
-  let current = new Date(now.getTime() + tzOffset*60*60*1000); // UTC + tzOffset
+  let current = new Date(now.getTime() + tzOffset*60*60*1000); 
 
   const day = String(current.getUTCDate()).padStart(2,'0');
   const month = String(current.getUTCMonth()+1).padStart(2,'0');
@@ -150,9 +150,9 @@ function generateSignals(count){
 `;
 
   for(let i=0;i<count;i++){
-    
-    // ⭐⭐⭐ UPDATED: Now Gap = 1–3 minutes ⭐⭐⭐
-    const gap = Math.floor(Math.random() * 3) + 1;
+
+    // ⭐⭐⭐ 2–4 minute random gap ⭐⭐⭐
+    const gap = Math.floor(Math.random() * 3) + 2;
 
     current.setMinutes(current.getMinutes()+gap);
 
